# playground-ModernCppIdioms

./: techio.yml
cpp-project/: CMakeLists.txt  check_filesystem.sh  check_init_statements.sh  check_optional.sh  check_regex_replacement.sh  check_sorted_insert.sh  check_structured_bindings.sh  check_time_intervals.sh  check_use_of_any.sh  measure_duration_test.sh  run_catch_test.sh
cpp-project/data/: text2.txt  text3.txt
cpp-project/src/: UniverseTest.cpp  check_filesystem_exercise.cpp  check_init_statements.cpp  check_structured_bindings.cpp  check_use_of_any.cpp  measure_duration_test.cpp  regex_test.cpp  test_time_intervals.cpp
cpp-project/src/Exercises/: filesystem.cpp  filesystem_solution.cpp  init_statements.cpp  init_statements_solution.cpp  measure_duration.h  optional.cpp  random_numbers.cpp  regex_replace.h  structured_binding.cpp  test_optional.cpp  test_variant.cpp  time_intervals.h  use_any.cpp  use_any_solution.cpp  variant.h  vector_sorted_insert.cpp
cpp-project/src/catch/: readme.md
cpp-project/src/helpers/: helpers.cpp  helpers.h
markdowns/: any.md  any_solution.md  filesystem.md  filesystem_solution.md  init_statement.md  init_statement_solution.md  measure_time_intervals.md  optional.md  optional_solution.md  random_generators.md  regex.md  regex_solution.md  sorted_vector_solution.md  structured_bindings.md  time_intervals_solution.md  variant.md  variant_solution.md  vector_operations.md  welcome.md
